<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/popup_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_your_own_wallpaper"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_image_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                app:icon="@drawable/ic_baseline_image_24"
                app:iconGravity="textEnd"
                app:iconSize="30sp"
                app:iconTint="@color/gray2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageViewPopup"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="@+id/add_image_btn"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/titlePopup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="funny Title"
                android:gravity="center"
                android:hint="@string/your_title_goes_here"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/add_image_btn" />

            <EditText
                android:id="@+id/descriptionPopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Funny Description"
                android:gravity="center"
                android:hint="@string/your_description_goes_here"
                android:lines="3"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/titlePopup" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionPopup"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/popup_ok_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/ok"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pupup_cancel_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/popup_ok_btn"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>